<resources>
    <string name="app_name">TokoOnline</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_agent">AgentActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_agent_edit">AgentEditActivity</string>
    <string name="title_activity_agent_maps">Map</string>
    <string name="title_activity_transaction">TransactionActivity</string>

    <string name="choose_category">Pilih Kategori</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="agen">Agen</string>
    <string name="tv_agen_baru">Agen Baru</string>
    <string name="masukkan_nama_toko">Masukkan Nama Toko</string>
    <string name="masukkan_nama_pemilik_toko">Masukkan Nama Pemilik Toko</string>
    <string name="masukkan_alamat_lengkap_toko">Masukkan Alamat Lengkap Toko</string>
    <string name="atur_lokasi">Atur Lokasi</string>
    <string name="simpan">Simpan</string>
    <string name="cari_agen">Cari Agen</string>
    <string name="tambah_produk">Tambah Produk</string>
    <string name="hapus_keranjang">Hapus keranjang</string>
    <string name="pilih_agen">Pilih Agen</string>
    <string name="checkout">Checkout</string>
    <string name="pilih_produk">Pilih Produk</string>
    <string name="mau_berapa_banyak">Mau berapa banyak?</string>
    <string name="tambahkan">Tambahkan</string>
    <string name="masuk">Masuk</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="txt_login">Masuk untuk melakukan Transaksi. Menambahkan maupun perbarui Agen, dan lainnya.</string>
    <string name="header_image">Header Image</string>
    <string name="masuk_sebagai">Masuk sebagai</string>
    <string name="yoenas">Yoenas</string>
    <string name="txt_header">Yuk, kita lakukan \nyang terbaik hari ini!</string>
    <string name="transaksi">Transaksi</string>
    <string name="txt_riwayat_transaksi">Histori Transaksi | Buat Transaksi Baru</string>
    <string name="txt_agen">Daftar Agen | Edit Agen | Tambah Agen Baru</string>
    <string name="profil">Profil</string>
    <string name="txt_profil">Lihat Profil Saya</string>
    <string name="close_category">Close Category</string>
    <string name="image_profile">Image Profile</string>
    <string name="kembali_ke_beranda">Kembali ke Beranda</string>
    <string name="info_profil">Info Profil</string>
    <string name="image_icon_nama">Image Icon Nama</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="yoenas_yusrilnas">Yoenas Yusrilnas</string>
    <string name="gender">Gender</string>
    <string name="alamat">Alamat</string>
    <string name="logout">Logout</string>
    <string name="titik_tiga">⋮</string>
    <string name="nama_toko">Nama Toko</string>
    <string name="lokasi">Lokasi</string>
    <string name="makanan">Makanan</string>
    <string name="le_minerale">Le Minerale</string>
    <string name="rp_45_000_x4">Rp 45.000 x4</string>
    <string name="rp_180_000">Rp 180.000</string>
    <string name="bakso_mana_lagi">Bakso Mana Lagi</string>
    <string name="_200_000">200.000</string>
    <string name="_181019000001">181019000001</string>
    <string name="_18_october_2019">18-October-2019</string>
    <string name="lihat_detail">Lihat detail</string>
    <string name="close_agent">Close agent</string>
    <string name="image_agent">Image Agent</string>
    <string name="toko_android_n">Toko Android N</string>
    <string name="surabaya">Surabaya</string>
    <string name="add_item_to_cart">add item to cart</string>
    <string name="no_faktur">No Faktur</string>
</resources>