<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp">

        <TextView
            android:id="@+id/tv_masuk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/masuk"
            android:textColor="@color/purple_700"
            android:textSize="32sp"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edt_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/box_stroke_teal"
            android:hint="@string/username"
            android:inputType="text"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="@color/black"
            android:importantForAutofill="no"
            app:layout_constraintTop_toBottomOf="@id/tv_masuk" />

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/box_stroke_teal"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="@color/black"
            android:importantForAutofill="no"
            app:layout_constraintTop_toBottomOf="@id/edt_username" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_corners_primary"
            android:text="@string/login"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/edt_password" />

        <ProgressBar
            android:id="@+id/progress_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/btn_login"/>
        <!--        android:indeterminateTint="@color/colorWhite"-->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/txt_login"
            android:textAlignment="center"
            android:textColor="@color/purple_500"
            app:layout_constraintTop_toBottomOf="@id/progress_login"
            android:visibility="visible" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>