<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_500"
    tools:context=".ui.home.MainActivity">

    <ScrollView
        android:id="@+id/sv_main"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/btn_masuk"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_heading"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:src="@drawable/img_pexels"
                android:contentDescription="@string/header_image"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_login_as"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/masuk_sebagai"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_username_as"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:drawablePadding="5dp"
                android:text="@string/yoenas"
                android:textColor="@color/white"
                app:drawableStartCompat="@drawable/ic_view_person"
                app:layout_constraintTop_toBottomOf="@id/tv_login_as" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="@drawable/bg_text_heading"
                android:padding="10dp"
                android:text="@string/txt_header"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/img_heading" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_transaction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardCornerRadius="10dp"
                app:layout_constraintBottom_toTopOf="@id/cv_agent"
                app:layout_constraintTop_toBottomOf="@id/img_heading">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawablePadding="10dp"
                        android:gravity="center"
                        android:text="@string/transaksi"
                        android:textColor="@color/purple_500"
                        android:textStyle="bold"
                        app:drawableStartCompat="@drawable/ic_card_transaction"
                        app:drawableTint="@color/teal_200" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="34dp"
                        android:paddingEnd="5dp"
                        android:paddingBottom="14dp"
                        android:text="@string/txt_riwayat_transaksi"
                        android:textColor="@color/purple_500"
                        android:textSize="12sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_agent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                app:cardCornerRadius="10dp"
                app:layout_constraintBottom_toTopOf="@id/cv_user"
                app:layout_constraintTop_toBottomOf="@id/cv_transaction">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawablePadding="10dp"
                        android:gravity="center"
                        android:text="@string/agen"
                        android:textColor="@color/purple_500"
                        android:textStyle="bold"
                        app:drawableStartCompat="@drawable/ic_card_agent"
                        app:drawableTint="@color/teal_200" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="34dp"
                        android:paddingEnd="5dp"
                        android:paddingBottom="14dp"
                        android:text="@string/txt_agen"
                        android:textColor="@color/purple_500"
                        android:textSize="12sp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                app:cardCornerRadius="10dp"
                app:layout_constraintTop_toBottomOf="@id/cv_agent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawablePadding="10dp"
                        android:gravity="center"
                        android:text="@string/profil"
                        android:textColor="@color/purple_500"
                        android:textStyle="bold"
                        app:drawableStartCompat="@drawable/ic_card_user"
                        app:drawableTint="@color/teal_200" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="34dp"
                        android:paddingEnd="5dp"
                        android:paddingBottom="14dp"
                        android:text="@string/txt_profil"
                        android:textColor="@color/purple_500"
                        android:textSize="12sp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_masuk"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        android:backgroundTint="@color/white"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/masuk"
        android:textColor="@color/purple_500"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sv_main" />

</androidx.constraintlayout.widget.ConstraintLayout>