<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardCornerRadius="12dp"
    app:cardElevation="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <TextView
            android:id="@+id/tv_options"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/titik_tiga"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@color/purple_500"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.infinityandroid.roundedimageview.RoundedImageView
            android:id="@+id/img_agent"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:adjustViewBounds="true"
            android:src="@drawable/img_no_image"
            app:corner_radius="10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_name_store"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_toStartOf="@+id/tv_options"
            android:text="@string/nama_toko"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/tv_options"
            app:layout_constraintStart_toEndOf="@id/img_agent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/lokasi"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@id/tv_name_store"
            app:drawableLeftCompat="@drawable/ic_location"
            app:layout_constraintTop_toBottomOf="@id/tv_name_store" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>